[tool.poetry]
name = "hidee-ho"
version = "0.1.0"
description = ""
authors = ["Micah Victoria <micah.victoria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
black = "^23.10.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
