[tool.poetry]
name = "hidee-ho"
version = "0.1.0"
description = ""
authors = ["Micah Victoria <micah.victoria@gmail.com>"]
readme = "README.md"
packages = [{include="hidee_ho", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
black = "^23.10.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pip-audit = "^2.6.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff.lint]
select = ['I']
